--- a/Aspect based Senti analysis/parsehub/movies.html
+++ b/Aspect based Senti analysis/parsehub/movies.html
@@ -8,29 +8,93 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+    <style>
+    .search-form .form-group {
+  	  float: right !important;
+ 	  transition: all 0.35s, border-radius 0s;
+	  width: 32px;
+	  height: 32px;
+	  background-color: #fff;
+	  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
+	  border-radius: 25px;
+	  border: 1px solid #ccc;
+	}
+	.search-form .form-group input.form-control {
+	  padding-right: 20px;
+	  border: 0 none;
+	  background: transparent;
+	  box-shadow: none;
+	  display:block;
+	}
+	.search-form .form-group input.form-control::-webkit-input-placeholder {
+	  display: none;
+	}
+	.search-form .form-group input.form-control:-moz-placeholder {
+	  /* Firefox 18- */
+	  display: none;
+	}
+	.search-form .form-group input.form-control::-moz-placeholder {
+	  /* Firefox 19+ */
+	  display: none;
+	}
+	.search-form .form-group input.form-control:-ms-input-placeholder {
+	  display: none;
+	}
+	.search-form .form-group:hover,
+	.search-form .form-group.hover {
+	  width: 100%;
+	  border-radius: 4px 25px 25px 4px;
+	}
+	.search-form .form-group span.form-control-feedback {
+	  position: absolute;
+	  top: -1px;
+	  right: -2px;
+	  z-index: 2;
+	  display: block;
+	  width: 34px;
+	  height: 34px;
+	  line-height: 34px;
+	  text-align: center;
+	  color: #3596e0;
+	  left: initial;
+	  font-size: 14px;
+	}
+	</style>
 </head>
 
 <body>
+	<div class="container">
+	<div class="header">
+            <nav>
+                <ul class="nav nav-pills pull-right">
+                    <li role="presentation" class="active"><a href="#">Home</a>
+                    </li>
+                </ul>
+            </nav>
+            <h3 class="text-muted">ABSA Flask App</h3>
+        </div>
 	<h1>Welcome to ABSA analyser</h1>
 	<h2>Search for a product!!</h2>
 	<div class="container">
-	   <div class="row">
-        <div class="col-sm-6 col-sm-offset-3">
-            <div id="imaginary_container">
-                <div class="input-group stylish-input-group">
-                	<form action="http://0.0.0.0:5000/test" method="get">
-                    <input type="text" id="myInput" name="nm" onkeyup="myFunction()" class="form-control"  placeholder="Search" >
-                    <span class="input-group-addon">
-                        <button type="submit">
-                            <span class="glyphicon glyphicon-search"></span>
-                        </button>
-                    </span>
-                	</form>
-                </div>
-            </div>
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            <h1>Expandable Search Form</h1>
         </div>
-	     </div>
     </div>
+    <div class="row">
+        <div class="col-md-4 col-md-offset-3">
+            <form action="http://0.0.0.0:5000/test" method="get" class="search-form">
+                <div class="form-group has-feedback">
+            		<label for="search" class="sr-only">Search</label>
+            		<input type="text" class="form-control" name="nm" id="search" placeholder="search">
+              		<span class="glyphicon glyphicon-search form-control-feedback"></span>
+            	</div>
+            </form>
+        </div>
+    </div>
+	</div>
+	</div>
 
 </body>
 </html>
