parsehub integ' done

--- a/Aspect based Senti analysis/parsehub/movies.html
+++ b/Aspect based Senti analysis/parsehub/movies.html
@@ -68,7 +68,7 @@
 	<div class="header">
             <nav>
                 <ul class="nav nav-pills pull-right">
-                    <li role="presentation" class="active"><a href="#">Home</a>
+                    <li role="presentation" class="active"><a href="http://0.0.0.0:5000">Home</a>
                     </li>
                 </ul>
             </nav>
