--- a/Aspect based Senti analysis/data_scraping/amazonreviews/review.html
+++ b/Aspect based Senti analysis/data_scraping/amazonreviews/review.html
@@ -23,10 +23,10 @@
       <div class="panel-heading">Reviews</div>
         <div class="panel-body">
             {% for review in Reviews %}
-            <h3>Title: </h3> <div>{{review["Title"]}}</div>
-            <h3>Name: </h3> <div>{{review["Reviewer"]}}</div>
-            <h3>Date: </h3> <div>{{review["Date"]}}</div>
-            <h3>Review: </h3> <div>{{review["Review"]}}</div>
+            <h3>Title: </h3> <div>{{review["title"]}}</div>
+            <h3>Name: </h3> <div>{{review["reviewer"]}}</div>
+            <h3>Date: </h3> <div>{{review["date"]}}</div>
+            <h3>Review: </h3> <div>{{review["review"]}}</div>
             <hr class="hr-primary" />
             {% endfor %}
         </div>
