--- a/Aspect based Senti analysis/data_scraping/amazonreviews/review.html
+++ b/Aspect based Senti analysis/data_scraping/amazonreviews/review.html
@@ -23,11 +23,13 @@
       <div class="panel-heading">Reviews</div>
         <div class="panel-body">
             {% for review in Reviews %}
-            <h3>Title: </h3> <div>{{review["title"]}}</div>
-            <h3>Name: </h3> <div>{{review["reviewer"]}}</div>
-            <h3>Date: </h3> <div>{{review["date"]}}</div>
-            <h3>Review: </h3> <div>{{review["review"]}}</div>
+            {% for i in range(0,10) %}
+            <h3>Title: </h3> <div>{{review["title"][i]}}</div>
+            <h3>Name: </h3> <div>{{review["reviewer"][i]}}</div>
+            <h3>Date: </h3> <div>{{review["date"][i]}}</div>
+            <h3>Review: </h3> <div>{{review["review"][i]}}</div>
             <hr class="hr-primary" />
+            {% endfor %}
             {% endfor %}
         </div>
     </div>
