--- a/Aspect based Senti analysis/data_scraping/reviewscraper/review.html
+++ b/Aspect based Senti analysis/data_scraping/reviewscraper/review.html
@@ -41,7 +41,7 @@
             <h3>Rating: </h3> <div>{{review["rating"]}}</div>
             <h3>Date: </h3> <div>{{review["date"]}}</div>
             <h3>Review: </h3> <div>{{review["review"]}}</div>
-            <hr class="hr-primary" />
+            <hr class="hr-danger" />
             {% endfor %}
         </div>
     </div>
