--- a/Aspect based Senti analysis/data_scraping/reviewscraper/movies.html
+++ b/Aspect based Senti analysis/data_scraping/reviewscraper/movies.html
@@ -84,7 +84,7 @@
     </div>
     <div class="row">
         <div class="col-md-4 col-md-offset-3">
-            <form action="http://0.0.0.0:5000/test" method="get" class="search-form">
+            <form action="test" method="get" class="search-form">
                 <div class="form-group has-feedback">
             		<label for="search" class="sr-only">Search</label>
             		<input type="text" class="form-control" name="nm" id="search" placeholder="search">
