--- a/Aspect based Senti analysis/final/reviewscraper/dashboard.html
+++ b/Aspect based Senti analysis/final/reviewscraper/dashboard.html
@@ -7,10 +7,14 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link href="https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap4.css" rel="stylesheet">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.bundle.js"></script>
-<script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap.min.css">
 
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap.min.js"></script>
+<!-- chart js -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.bundle.js"></script>
 
 <style>
 html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
@@ -89,8 +93,12 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <button class="w3-button w3-dark-grey">More Countries  <i class="fa fa-arrow-right"></i></button>
   </div>
   <hr>
-  <div class="table-responsive">
-      <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+  <div class="card mb-3">
+    <div class="card-header">
+      <i class="fa fa-table"></i> Data Table Example</div>
+    <div class="card-body">
+    <div class="table-responsive">
+      <table id="example" class="table table-bordered" style="width:100%">
         <thead>
           <tr>
             <th>Name</th>
@@ -132,6 +140,8 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
           {% endfor %}
         </tbody>
       </table>
+      </div>
+     </div>
     </div>
   <!-- Footer -->
   <footer class="w3-container w3-padding-16 w3-light-grey">
@@ -168,7 +178,7 @@ function w3_close() {
 </script>
 
 <script type="text/javascript">
-$(document).ready(function(){$("#dataTable").DataTable()});
+$(document).ready(function() {$('#example').DataTable();} );
 </script>
 
 <script>
