--- a/Aspect based Senti analysis/final/finalreviewscraper/charts.html
+++ b/Aspect based Senti analysis/final/finalreviewscraper/charts.html
@@ -13,11 +13,15 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.bundle.js"></script>
-
+<!-- zing chart -->
+<script src= "https://cdn.zingchart.com/zingchart.min.js"></script>
+<script> zingchart.MODULESDIR = "https://cdn.zingchart.com/modules/"; ZC.LICENSE = ["569d52cefae586f634c54f86dc99e6a9","ee6b7db5b51705a13dc2339db3edaf6d"];</script>
 
 <style>
 html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 .table-responsive {height:400px;}
+#myChart {height:100%; width:100%;	min-height:150px;}
+.zc-ref {	display:none;}
 </style>
 </head>
 
@@ -37,7 +41,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <div class="w3-bar-block">
     <a href="#" class="w3-bar-item w3-button w3-padding-16 w3-hide-large w3-dark-grey w3-hover-black" onclick="w3_close()" title="close menu"><i class="fa fa-remove fa-fw"></i>  Close Menu</a>
     <a href="#" class="w3-bar-item w3-button w3-padding w3-blue"><i class="fa fa-dashboard"></i>  Overview</a>
-    <a href="http://0.0.0.0:5000/chart" class="w3-bar-item w3-button w3-padding"><i class="fa fa-area-chart"></i>  Chart</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-area-chart"></i>  Chart</a>
     <a href="#" class="w3-bar-item w3-button w3-padding"><i class="fa fa-table"></i>  Tables</a>
     <a href="https://github.com/pranithkumar/Aspect-Based-Sentiment-Analysis" class="w3-bar-item w3-button w3-padding"><i class="fa fa-folder-o"></i>  Documentation</a>
     <a href="https://github.com/pranithkumar/Aspect-Based-Sentiment-Analysis" class="w3-bar-item w3-button w3-padding"><i class="fa fa-file-code-o"></i>  Code Repository</a>
@@ -59,76 +63,27 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <hr>
   <!-- Chart to show sentiments -->
   <div class="w3-container">
-    <h4>Charts</h4>
-    <canvas id="myChart" width="150px" height="50px"></canvas>
-    <hr>
-  </div>
+    <div class="col-lg-5 col-sm-6">
+        <!-- clearfix makes it so elements are not side by side -->
+        <div class="clearfix"></div>
+        <h4 class="section-heading">Doughnut / Pie Chart</h4>
+        <hr class="section-heading-spacer">
+        <canvas id="pieChart" width="150px" height="150px"></canvas>
+    </div>
 
-  <div class="w3-container">
-    <h4>Top mentioned Aspects</h4>
-    <table class="w3-table w3-striped w3-bordered w3-border w3-hoverable w3-white">
-      <thead>
-        <tr>
-          <th>Aspects</th>
-          <th>No of times Appeared</th>
-        </tr>
-      </thead>
-      <tbody>
-      {% for asp in aspects %}
-      <tr>
-        <td>{{asp[0]}}</td>
-        <td>{{asp[1]}}</td>
-      </tr>
-      {% endfor %}
-    </tbody>
-    </table><br>
-    <button class="w3-button w3-dark-grey">More Aspects  <i class="fa fa-arrow-right"></i></button>
-  </div>
-
-  <!-- Reviews -->
-  <hr>
-  <div class="w3-container">
-  <h4>Reviews</h4>
-  <div class="table-responsive">
-      <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-        <thead>
-          <tr>
-            <th>Name</th>
-            <th>Reviewer</th>
-            <th>Rating</th>
-            <th>Date</th>
-            <th>Review</th>
-          </tr>
-        </thead>
-        <tbody id="myTable">
-        </tr>
-        {% for review in AmazonReviews %}
-        {% for i in range(0,10)%}
-        <tr>
-        <td>{{review["title"][i]}}</td>
-        <td>{{review["reviewer"][i]}}</td>
-        <td>{{review["rating"][i]}}</td>
-        <td>{{review["date"][i]}}</td>
-        <td>{{review["review"][i]}}</td>
-        </tr>
-        {% endfor %}
-        {% endfor %}
-        {% for review in FlipkartReviews %}
-        <tr>
-        <td>{{review["title"]}}</td>
-        <td>{{review["reviewer"]}}</td>
-        <td>{{review["rating"]}}</td>
-        <td>{{review["date"]}}</td>
-        <td>{{review["review"]}}</td>
-        </tr>
-        {% endfor %}
-        </tbody>
-      </table>
-      <div class="col-md-12 text-center">
-      <ul class="pagination pagination-lg pager" id="myPager"></ul>
+    <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+      <h4 class="section-heading">Bar Plot</h4>
+      <hr class="section-heading-spacer">
+      <canvas id="myChart" width="150px" height="150px"></canvas>
+      <hr>
     </div>
   </div>
-</div>
+
+  <div class="w3-container">
+    <h4>Word Cloud</h4>
+    <canvas id="myCloud" width="150px" height="50px"><a class="zc-ref" href="#"></a></canvas>
+  </div>
+
   <!-- Footer -->
   <footer class="w3-container w3-padding-16 w3-light-grey">
     <h4></h4>
@@ -163,14 +118,52 @@ function w3_close() {
 }
 </script>
 
-<!-- Data table js function
-<script type="text/javascript">
-$(document).ready(function(){$("#dataTable").DataTable()});
+<!-- Pie Chart -->
+<script>
+var ctx = document.getElementById("pieChart").getContext('2d');
+var myChart = new Chart(ctx, {
+    type: 'polarArea',
+    data: {
+        labels:[{% for item in aspects %}
+                  "{{item[0]}}",
+                  {% endfor %}],
+        datasets: [{
+            label: '# of Entities for each Aspect',
+            data : [{% for item in aspects %}
+                      {{item[1]}},
+                    {% endfor %}],
+            backgroundColor: [
+                'rgba(255, 99, 132, 0.2)',
+                'rgba(54, 162, 235, 0.2)',
+                'rgba(255, 206, 86, 0.2)',
+                'rgba(75, 192, 192, 0.2)',
+                'rgba(153, 102, 255, 0.2)',
+                'rgba(255, 159, 64, 0.2)'
+            ],
+            borderColor: [
+                'rgba(255,99,132,1)',
+                'rgba(54, 162, 235, 1)',
+                'rgba(255, 206, 86, 1)',
+                'rgba(75, 192, 192, 1)',
+                'rgba(153, 102, 255, 1)',
+                'rgba(255, 159, 64, 1)'
+            ],
+            borderWidth: 0.5
+        }]
+    },
+    options: {
+        scales: {
+            yAxes: [{
+                ticks: {
+                    beginAtZero:true
+                }
+            }]
+        }
+    }
+});
 </script>
- -->
 
-
-<!-- Chart js -->
+<!-- Bar Chart js -->
 <script>
 var ctx = document.getElementById("myChart").getContext('2d');
 var myChart = new Chart(ctx, {
@@ -213,6 +206,40 @@ var myChart = new Chart(ctx, {
         }
     }
 });
+</script>
+
+<!-- word cloud -->
+<script>
+    var myConfig = {
+    "graphset":[
+    {
+      "type":"wordcloud",
+      "options":{
+        "style":{
+          "tooltip":{
+            visible: true,
+            text: '%text: %hits'
+          }
+        },
+        "words":[
+            {
+              {% for item in aspects %}
+                "text":"{{item[0]}}",
+                "count":"{{item[1]}}"
+              {% endfor %}
+            }
+          ]
+        }
+      }
+    ]
+    };
+
+    zingchart.render({
+      id: 'myCloud',
+      data: myConfig,
+      height: '100%',
+      width: '100%'
+    });
 </script>
 
 </body>
