--- a/Aspect based Senti analysis/aws/finalreviewscraper/index.html
+++ b/Aspect based Senti analysis/aws/finalreviewscraper/index.html
@@ -66,7 +66,7 @@
                             <div class="col-sm-6 col-sm-offset-3">
                                 <div id="imaginary_container">
                                     <div>
-                                      <form action="http://0.0.0.0:5000/test" method="get" id="form_search" name="form_search" class="form">
+                                      <form action="test" method="get" id="form_search" name="form_search" class="form">
                                           <div class="form-group">
                                             <div class="input-group">
                                               <input class="form-control" name="nm" id="search" placeholder="Search for..." type="text">
