--- a/Aspect based Senti analysis/aws/finalreviewscraper/index.html
+++ b/Aspect based Senti analysis/aws/finalreviewscraper/index.html
@@ -44,7 +44,7 @@
             <!-- Menu Items -->
             <div class="collapse navbar-collapse" id="mainNavBar">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="0.0.0.0:5000">Home</a></li>
+                    <li class="active"><a href="/">Home</a></li>
                     <li><a href="#">About</a></li>
                 </ul>
             </div>
