--- a/Aspect based Senti analysis/final/finalreviewscraper/dashboard.html
+++ b/Aspect based Senti analysis/final/finalreviewscraper/dashboard.html
@@ -4,12 +4,12 @@
 <title>ABSA Analytics</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap4.css">
-<link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css">
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<link rel="stylesheet" href="{{ url_for('static',filename='w3.css')}}">
+<link rel="stylesheet" href="{{ url_for('static',filename='raleway.css')}}">
+<link rel="stylesheet" href="{{ url_for('static',filename='font-awesome.min.css')}}">
+<link rel="stylesheet" href="{{ url_for('static',filename='dataTables.bootstrap4.css')}}">
+<link rel="stylesheet" href="{{ url_for('static',filename='jquery.dataTables.min.css')}}">
+<link href="{{ url_for('static',filename='bootstrap.min.css')}}" rel="stylesheet" id="bootstrap-css">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.bundle.js"></script>
