static files frontend

--- a/Aspect based Senti analysis/final/finalreviewscraper/dashboard.html
+++ b/Aspect based Senti analysis/final/finalreviewscraper/dashboard.html
@@ -4,15 +4,15 @@
 <title>ABSA Analytics</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="{{ url_for('static',filename='w3.css')}}">
-<link rel="stylesheet" href="{{ url_for('static',filename='raleway.css')}}">
-<link rel="stylesheet" href="{{ url_for('static',filename='font-awesome.min.css')}}">
-<link rel="stylesheet" href="{{ url_for('static',filename='dataTables.bootstrap4.css')}}">
-<link rel="stylesheet" href="{{ url_for('static',filename='jquery.dataTables.min.css')}}">
-<link href="{{ url_for('static',filename='bootstrap.min.css')}}" rel="stylesheet" id="bootstrap-css">
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.bundle.js"></script>
+<link rel="stylesheet" href="{{ url_for('static',filename='style/w3.css')}}">
+<link rel="stylesheet" href="{{ url_for('static',filename='style/raleway.css')}}">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="{{ url_for('static',filename='style/dataTables.bootstrap4.css')}}">
+<link rel="stylesheet" href="{{ url_for('static',filename='style/jquery.dataTables.min.css')}}">
+<link href="{{ url_for('static',filename='style/bootstrap.min.css')}}" rel="stylesheet" id="bootstrap-css">
+<script src="{{ url_for('static', filename='js/bootstrap.min.js')}}"></script>
+<script src="{{ url_for('static', filename='js/jquery-1.11.1.min.js')}}"></script>
+<script src="{{ url_for('static', filename='js/Chart.bundle.js')}}"></script>
 
 
 <style>
