--- a/Aspect based Senti analysis/final/finalreviewscraper/dashboard.html
+++ b/Aspect based Senti analysis/final/finalreviewscraper/dashboard.html
@@ -177,14 +177,14 @@ $(document).ready(function(){$("#dataTable").DataTable()});
             "{{item}}",
             {% endfor %}],
             datasets: [{
-                label: 'Dataset 1',
+                label: 'Positive',
                 backgroundColor: 'rgb(26, 255, 26,0.8)',
                 stack: 'Stack 0',
                 data : [{% for item in values %}
                           {{item[0]}},
                         {% endfor %}]
             }, {
-                label: 'Dataset 2',
+                label: 'Negative',
                 backgroundColor: 'rgb(255, 26, 26,0.8)',
                 stack: 'Stack 0',
                 data : [{% for item in values %}
