--- a/Aspect based Senti analysis/final/finalreviewscraper/charts.html
+++ b/Aspect based Senti analysis/final/finalreviewscraper/charts.html
@@ -3,9 +3,9 @@
 <head>
 <title>ABSA Analytics</title>
 <meta charset="UTF-8">
-<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-<meta http-equiv="Pragma" content="no-cache" />
-<meta http-equiv="Expires" content="0" />
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content="0">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="{{ url_for('static',filename='style/w3.css')}}">
 <link rel="stylesheet" href="{{ url_for('static',filename='style/raleway.css')}}">
@@ -82,11 +82,11 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <div>
     <h4>Word Cloud</h4>
     <div class="col-sm-6">
-      <img class="img-responsive" src="{{positiveImg}}">
+      <img class="img-responsive" id="wordcloud_pos">
     </div>
 
     <div class="col-sm-6">
-      <img class="img-responsive" src="{{negativeImg}}">
+      <img class="img-responsive" id="wordcloud_neg">
     </div>
   </div>
 
@@ -208,7 +208,7 @@ labels:[{% for item in labels %}
 </script>
 
 <!-- word cloud -->
-
+<script type="text/javascript" src="{{ url_for('static', filename='js/wordcloud.js?')}}"+{{count}}></script>
 
 </body>
 </html>
