--- a/Aspect based Senti analysis/final/finalreviewscraper/dashboard.html
+++ b/Aspect based Senti analysis/final/finalreviewscraper/dashboard.html
@@ -3,9 +3,9 @@
 <head>
 <title>ABSA Analytics</title>
 <meta charset="UTF-8">
-<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-<meta http-equiv="Pragma" content="no-cache" />
-<meta http-equiv="Expires" content="0" />
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content="0">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="{{ url_for('static',filename='style/w3.css')}}">
 <link rel="stylesheet" href="{{ url_for('static',filename='style/raleway.css')}}">
